2013-09-13  Andreas Kling  <akling@apple.com>

        [CTTE] Tighter element types for RenderSVGShape and subclasses.
        <https://webkit.org/b/121302>

        Reviewed by Antti Koivisto.

        Codify the following:

        - RenderSVGPath always has an SVGGraphicsElement.
        - RenderSVGEllipse always has an SVGGraphicsElement.
        - RenderSVGRect always has an SVGRectElement.
        - RenderSVGShape always has an SVGGraphicsElement.

        None of these renderers are ever anonymous, so delete element() and provide
        strongly typed reference getters instead.

2013-09-13  Andreas Kling  <akling@apple.com>

        [CTTE] RenderSVGResourceFilterPrimitive always has an SVGFilterPrimitiveStandardAttributes.
        <https://webkit.org/b/121300>

        Reviewed by Anders Carlsson.

        This renderer is never anonymous, and always has a corresponding SVGFilterPrimitiveStandardAttributes element. 

2013-09-12  Darin Adler  <darin@apple.com>

        Finish removing layer-violating code from Pasteboard (just for Mac during this first step)
        https://bugs.webkit.org/show_bug.cgi?id=121279

        Reviewed by Anders Carlsson.

        * editing/Editor.h: Added webContentFromPasteboard member function, private nested class
        WebContentReader, private createFragmentForImageResourceAndAddResource and
        createFragmentAndAddResources member functions.

        * editing/mac/EditorMac.mm: Re-sorted includes and added some.
        (WebCore::Editor::pasteWithPasteboard): Call the new webContentFromPasteboard function.
        (WebCore::Editor::insertParagraphSeparatorInQuotedContent): Comment tweak.
        (WebCore::styleForSelectionStart): Removed an unneeded call to String::impl.
        (WebCore::Editor::readPlainTextFromPasteboard): Updated to use an isURL boolean instead
        of a separate string named "url".
        (WebCore::Editor::WebContentReader::readWebArchive): Added. Contains reworked code that