@@ -1,5 +1,14 @@
 2013-09-13  Andreas Kling  <akling@apple.com>
 
+        [CTTE] RenderSVGImage always has a SVGImageElement.
+        <https://webkit.org/b/121301>
+
+        Reviewed by Anders Carlsson.
+
+        This renderer is never anonymous, and always has a corresponding SVGImageElement.
+
+2013-09-13  Andreas Kling  <akling@apple.com>
+
         [CTTE] Tighter element types for RenderSVGShape and subclasses.
         <https://webkit.org/b/121302>
 
